Avoid startup flickering

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -47,7 +47,7 @@ iframe {
     height: 100%;
     padding: 0px;
     margin: 0px;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
